[package]
name = "beacon-router"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.25"
redis = { version = "0.28.2", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = "1.43.0"
uuid = {version = "1.13.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
